--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "none.js"
   },
   "author": "Ameen Demidem",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.14.0"
+  }
 }
